--- a/sql/base.html
+++ b/sql/base.html
@@ -49,6 +49,11 @@
 					<h3>Работа со строками</h3>
 					<h4>CHAR_LENGTH</h4>
 					<p><code>integer CHAR_LENGTH(str string)</code>возвращают длину строки. Поддерживает многобайтовые символы.</p>
+					<h2>Console</h2>
+					<pre>mysql --host=localhost --port=3306 --database=webhobru_yii --user=root --password --execute="select * from user"</pre>
+					<pre>mysql -hlocalhost -P3306 -Dwebhobru_yii -uroot -p -e "select * from user"</pre>
+					<pre>mysql -uroot -p -e "show databases"</pre>
+					<pre>mysql -uroot --password="" -Dwebhobru_yii -e "call buy_list(1)"</pre>
 				</div>
 			</div>
 		</div>
