--- a/linux/linux-apache2.html
+++ b/linux/linux-apache2.html
@@ -44,7 +44,7 @@ sudo apt-get install apache2</pre>
 
 <h3>install php5 mysql</h3>
 <p>Теперь приконнектим к новоиспеченному апачу php5, вместе с библиотеками для работы с MySQL и графикой:</p>
-<pre>sudo apt-get install php5 libapache2-mod-php5 libapache2-mod-auth-mysql php5-mysql php-image-graph imagemagick</pre>
+<pre>sudo apt-get install php5 libapache2-mod-php5 libapache2-mod-auth-mysql php5-mysql php5-cli</pre>
 
 <p>Старт/Стоп/Перезапуск сервера Apache под Linux в терминале</p>
 <pre>/etc/init.d/apache2 {restart}{stop}{start}</pre>
