--- a/php/all.html
+++ b/php/all.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Linux Mint All</title>
+		<title>MySQL basic knowledge</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,25 +20,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<h1 class="text-center">Linux Mint All</h1>
+					<h1 class="text-center">MySQL basic knowledge</h1>
 					<div id="toc"></div>
-					<h2>Programms settings</h2>
-					<h3>Terminal</h3>
-					<ul>
-						<li>Размер терминала по умолчанию</li>
-						<li>Убрать - Включить клавишу для доступа в меню (F10 по умолчанию)</li>
-					</ul>
-					<h2>Additional programs</h2>
-					<h3>mc</h3>
+					<h2>php.ini</h2>
 <pre>
-sudo apt-get install mc
+upload_max_filesize = 10M
+max_file_uploads = 20
+post_max_size = 210M
 </pre>
-					<h3>Shutter (PrintScreen as PicPick)</h3>
-					<h4>Settings</h4>
-					<ul>
-						<li>Set to run this application with the system.</li>
-						<li>Customize hotkey printskrin to run the application in selection screen area mode: </li>
-					</ul>
+<pre>
+sudo service apache2 restart
+</pre>
 				</div>
 			</div>
 		</div>
