--- a/linux/mint/all.html
+++ b/linux/mint/all.html
@@ -22,11 +22,15 @@
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<h1 class="text-center">Linux Mint All</h1>
 					<div id="toc"></div>
+					<h2>Параметры системы</h2>
+					<h3>Клавиатура</h3>
+					<h4>Комбинации клавишь</h4>
+					<p>Переназнач комбинации клавишь ctrl+alt+up, ctrl+alt+down для удобной работы в SublimeText3</p>
 					<h2>Programms settings</h2>
 					<h3>Terminal</h3>
 					<ul>
-						<li>Размер терминала по умолчанию</li>
-						<li>Убрать - Включить клавишу для доступа в меню (F10 по умолчанию)</li>
+						<li>Размер терминала по умолчанию - сделай под себя</li>
+						<li>Убрать - Включить клавишу для доступа в меню (F10 по умолчанию) - для удобной работы в терминаля с утилитой mc</li>
 					</ul>
 					<h2>Additional programs</h2>
 					<h3>mc</h3>
