--- a/sql/all.html
+++ b/sql/all.html
@@ -40,6 +40,8 @@
 					<h2>Операторы</h2>
 					<h3>COALESCE</h3>
 					<p>Возвращает первый в списке элемент со значением, не равным NULL: <code>SELECT COALESCE(NULL,2,NULL,1) -> 2;</code></p>
+					<h3>LAST_INSERT_ID()</h3>
+					<p>Возвращает последний вставленный id</p>
 					<h2>Параметры</h2>
 					<h3>Просмотр какого ибо параметра</h3>
 					<pre>SHOW VARIABLES LIKE 'sql_safe_updates'</pre>
